--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="/fonts/fonts.css" />
-    <link rel="stylesheet" href="/styles/global.css" />
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="/fonts/fonts.css" >
+    <link rel="stylesheet" href="/styles/global.css" >
+    <link rel="stylesheet" href="/styles/style.css" >
   </head>
   <body>
     <header class="header">
@@ -25,15 +25,14 @@
         </ul>
       </nav>
       <div class="header__logo">
-        <a class="header__logo-image"
-          ><img src="/images/logo-black.svg" alt="черный логотип сайта"
-        /></a>
+        <a class="header__logo-image"><img src="/images/logo-black.svg" alt="черный логотип сайта"
+        ></a>
       </div>
       <address class="address header__address">
         <a class="header__link" href="tel:+9-999-555-5555">+9 999 555 5555</a>
         <a class="header__link" href="info@sobaka.ge">info@sobaka.ge</a>
         <p>
-          наб. Принсенграхт 263-,<br />
+          наб. Принсенграхт 263-,<br>
           265, Амстердам
         </p>
       </address>
@@ -127,35 +126,35 @@
             class="about__logo-image"
             src="/images/logo-white.svg"
             alt="белый логотип сайта"
-          />
+          >
         </div>
         <div class="about__column">
           <h2 class="about__title">Об аукционе</h2>
           <p class="about__text">
             Здесь вы не встретите очередное пафосное собрание невероятно
             дорогого антиквариата. Наши лоты вообще не должны были попасть
-            <br />ни на один аукцион. Потому что кому нужен дневник девочки-<br />подростка
+            <br>ни на один аукцион. Потому что кому нужен дневник девочки-<br>подростка
             или картина, которую может нарисовать даже ребёнок? Кому нужны все
             эти странные вещи, созданные любителями?
           </p>
           <p class="about__text about__text-no-margin">
             Слишком сложные или, наоборот, слишком простые. Опережающие своё
             время. В пух и прах растерзанные критиками. Непринятые и непонятые.
-            Когда-то они казались просто неудачными. Но, несмотря <br />на
+            Когда-то они казались просто неудачными. Но, несмотря <br>на
             критику, кажущуюся простоту или сложность, сейчас без этих лотов
             невозможно представить современную культуру. Когда в эти вещи не
             верил никто, продолжали верить их создатели. И сейчас эти лоты
-            <br />стали культовыми.
+            <br>стали культовыми.
           </p>
         </div>
       </section>
     </main>
     <footer class="footer">
-      <address class="address">
+      <address class="address footer__address">
         <a class="header__link" href="tel:+9-999-555-5555">+9 999 555 5555</a>
         <a class="header__link" href="info@sobaka.ge">info@sobaka.ge</a>
         <p>
-          наб. Принсенграхт 263-,<br />
+          наб. Принсенграхт 263-,<br>
           265, Амстердам
         </p>
       </address>
@@ -178,18 +177,18 @@
         <ul class="footer__social-list">
           <li class="footer__social-list-item">
             <a class="footer__social-link" href="#">
-              <img class="footer__social-icon" src="/images/yt.svg" alt="" />
+              <img class="footer__social-icon" src="/images/yt.svg" alt="" >
             </a>
           </li>
           <li class="footer__social-list-item">
             <a class="footer__social-link" href="#">
-              <img class="footer__social-icon" src="/images/vk.svg" alt="" />
+              <img class="footer__social-icon" src="/images/vk.svg" alt="" >
             </a>
           </li>
           <li class="footer__social-list-item">
             <a class="footer__social-link" href="#">
               <img
-                class="footer__social-icon" src="/images/pinterest.svg" alt="" />
+                class="footer__social-icon" src="/images/pinterest.svg" alt="" >
             </a>
           </li>
         </ul>
