--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" >
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-    <link rel="stylesheet" href="/fonts/fonts.css" >
-    <link rel="stylesheet" href="/styles/global.css" >
-    <link rel="stylesheet" href="/styles/style.css" >
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
     <header class="header">
@@ -29,7 +29,7 @@
         ></a>
       </div>
       <address class="address header__address">
-        <a class="header__link" href="tel:+9-999-555-5555">+9 999 555 5555</a>
+        <a class="header__link" href="tel:+99995555555">+9 999 555 5555</a>
         <a class="header__link" href="info@sobaka.ge">info@sobaka.ge</a>
         <p>
           наб. Принсенграхт 263-,<br>
@@ -151,7 +151,7 @@
     </main>
     <footer class="footer">
       <address class="address footer__address">
-        <a class="header__link" href="tel:+9-999-555-5555">+9 999 555 5555</a>
+        <a class="header__link" href="tel:+99995555555">+9 999 555 5555</a>
         <a class="header__link" href="info@sobaka.ge">info@sobaka.ge</a>
         <p>
           наб. Принсенграхт 263-,<br>
