--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </ul>
       </nav>
       <div class="header__logo">
-        <a class="header__logo-image"><img src="/images/logo-black.svg" alt="черный логотип сайта"
+        <a class="header__logo-image"><img src="./images/logo-black.svg" alt="черный логотип сайта"
         ></a>
       </div>
       <address class="address header__address">
@@ -124,7 +124,7 @@
         <div class="about__logo">
           <img
             class="about__logo-image"
-            src="/images/logo-white.svg"
+            src="./images/logo-white.svg"
             alt="белый логотип сайта"
           >
         </div>
@@ -177,18 +177,18 @@
         <ul class="footer__social-list">
           <li class="footer__social-list-item">
             <a class="footer__social-link" href="#">
-              <img class="footer__social-icon" src="/images/yt.svg" alt="" >
+              <img class="footer__social-icon" src="./images/yt.svg" alt="" >
             </a>
           </li>
           <li class="footer__social-list-item">
             <a class="footer__social-link" href="#">
-              <img class="footer__social-icon" src="/images/vk.svg" alt="" >
+              <img class="footer__social-icon" src="./images/vk.svg" alt="" >
             </a>
           </li>
           <li class="footer__social-list-item">
             <a class="footer__social-link" href="#">
               <img
-                class="footer__social-icon" src="/images/pinterest.svg" alt="" >
+                class="footer__social-icon" src="./images/pinterest.svg" alt="" >
             </a>
           </li>
         </ul>
