--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
       <address class="address header__address">
         <a class="header__link" href="tel:+99995555555">+9 999 555 5555</a>
-        <a class="header__link" href="malito:info@sobaka.ge">info@sobaka.ge</a>
+        <a class="header__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>
           наб. Принсенграхт 263-,<br>
           265, Амстердам
@@ -152,7 +152,7 @@
     <footer class="footer">
       <address class="address footer__address">
         <a class="header__link" href="tel:+99995555555">+9 999 555 5555</a>
-        <a class="header__link" href="malito:info@sobaka.ge">info@sobaka.ge</a>
+        <a class="header__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>
           наб. Принсенграхт 263-,<br>
           265, Амстердам
