исправлен файл html и css

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </ul>
       </nav>
       <div class="header__logo">
-        <a class="header__logo-image"><img src="./images/logo-black.svg" alt="черный логотип сайта"
+        <a class="header__logo-image"><img src="./images/logo-black.svg" alt="черный логотип в шапке сайта"
         ></a>
       </div>
       <address class="address header__address">
@@ -133,7 +133,7 @@
           <p class="about__text">
             Здесь вы не встретите очередное пафосное собрание невероятно
             дорогого антиквариата. Наши лоты вообще не должны были попасть
-            <br>ни на один аукцион. Потому что кому нужен дневник девочки-<br>подростка
+            <br>ни на один аукцион. Потому что кому нужен дневник девочки-подростка
             или картина, которую может нарисовать даже ребёнок? Кому нужны все
             эти странные вещи, созданные любителями?
           </p>
@@ -150,7 +150,7 @@
       </section>
     </main>
     <footer class="footer">
-      <address class="address footer__address">
+      <address class="address">
         <a class="header__link" href="tel:+99995555555">+9 999 555 5555</a>
         <a class="header__link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>
@@ -177,18 +177,18 @@
         <ul class="footer__social-list">
           <li class="footer__social-list-item">
             <a class="footer__social-link" href="#">
-              <img class="footer__social-icon" src="./images/yt.svg" alt="" >
+              <img class="footer__social-icon" src="./images/yt.svg" alt="ссылка на социальную сеть Ютуб" >
             </a>
           </li>
           <li class="footer__social-list-item">
             <a class="footer__social-link" href="#">
-              <img class="footer__social-icon" src="./images/vk.svg" alt="" >
+              <img class="footer__social-icon" src="./images/vk.svg" alt="ссылка на социальную сеть Вконтакте" >
             </a>
           </li>
           <li class="footer__social-list-item">
             <a class="footer__social-link" href="#">
               <img
-                class="footer__social-icon" src="./images/pinterest.svg" alt="" >
+                class="footer__social-icon" src="./images/pinterest.svg" alt="ссылка на социальную сеть Пинтерест" >
             </a>
           </li>
         </ul>
