исправлен about__text

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           <p class="about__text">
             Здесь вы не встретите очередное пафосное собрание невероятно
             дорогого антиквариата. Наши лоты вообще не должны были попасть
-            <br>ни на один аукцион. Потому что кому нужен дневник девочки-подростка
+            ни на один аукцион. Потому что кому нужен дневник девочки-подростка
             или картина, которую может нарисовать даже ребёнок? Кому нужны все
             эти странные вещи, созданные любителями?
           </p>
@@ -144,7 +144,7 @@
             критику, кажущуюся простоту или сложность, сейчас без этих лотов
             невозможно представить современную культуру. Когда в эти вещи не
             верил никто, продолжали верить их создатели. И сейчас эти лоты
-            <br>стали культовыми.
+            стали культовыми.
           </p>
         </div>
       </section>
