--- a/index.html
+++ b/index.html
@@ -138,13 +138,8 @@
             эти странные вещи, созданные любителями?
           </p>
           <p class="about__text about__text-no-margin">
-            Слишком сложные или, наоборот, слишком простые. Опережающие своё
-            время. В пух и прах растерзанные критиками. Непринятые и непонятые.
-            Когда-то они казались просто неудачными. Но, несмотря <br>на
-            критику, кажущуюся простоту или сложность, сейчас без этих лотов
-            невозможно представить современную культуру. Когда в эти вещи не
-            верил никто, продолжали верить их создатели. И сейчас эти лоты
-            стали культовыми.
+            Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+            на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. 
           </p>
         </div>
       </section>
